# Teacher-Mangenemet-System

./: .gitignore  data.json  main.py  pyproject.toml  render.yaml  requirements.txt  runner.py
app/: app.py  function.py
app/core/: config.py  dependencies.py  exceptions.py  middleware.py
app/database/: __init__.py  session.py
app/models/: __init__.py  attendance.py  batches.py  classes.py  fees.py  homework.py  student.py  subjects.py  teacher.py  user.py
app/routers/: attendance.py  auth.py  dashboard.py  teacher.py
app/schemas/: __init__.py  attendance.py  batches.py  classes.py  fees.py  homework.py  student.py  subjects.py  teacher.py  user.py
app/services/: attendance_service.py  auth_service.py  teacher_service.py
app/utils/: auth_checker.py  data_utils.py  helpers.py  json_loader.py  seeder.py  timezone.py
migrations/: env.py
migrations/versions/: b06d09e4a235_initial_migration.py
static/js/: dashboard.js  style.js  teacher_class_details.js  teacher_classes.js  teacher_students.js
static/styles/: dashboard.css  style.css  teacher_class_details.css  teacher_classes.css  teacher_dashboard.css  teacher_students.css
templates/: dashboard.html  login_page.html  login_success.html  teacher_class_details.html  teacher_classes.html  teacher_dashboard.html  teacher_students.html
