[project]
name = "fastapi-learning"
version = "0.1.0"
description = "FastAPI Learning Project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "imagekitio",
    "aiosqlite",
    "sqlmodel",
    "pydantic",
    "itsdangerous",
    "jinja2",
    "passlib[bcrypt]",
    "python-multipart",
    "tzdata>=2025.3",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = []
